--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -40,7 +40,6 @@
 	  		<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -50,27 +49,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
       		<groupId>org.springframework.boot</groupId>
       		<artifactId>spring-boot-starter-web</artifactId>
     	</dependency>
-    	
 		<dependency>
 		  	<groupId>org.springframework.boot</groupId>
 		  	<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		
 		<dependency>
 		  	<groupId>org.springframework.boot</groupId>
 		  	<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
 		<dependency>  
     		<groupId>org.springframework.boot</groupId>  
     		<artifactId>spring-boot-starter-freemarker</artifactId>  
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>springloaded</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -118,7 +117,6 @@
 		    <version>5.19.0.2</version>  
 		</dependency> 
 		<!-- 工作流 end -->
-		
 
 		
   </dependencies>
