--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 endpoints.shutdown.enabled=true
-endpoints.shutdown.sensitive=false
+endpoints.shutdown.sensitive=true
 security.user.name=admin
 security.user.password=admin888
 management.security.role=SUPERUSER
@@ -12,3 +12,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
