--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -18,7 +18,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	
 	<dependencyManagement>
@@ -27,6 +26,13 @@
 	            <groupId>io.spring.platform</groupId>
 	            <artifactId>platform-bom</artifactId>
 	            <version>Athens-RELEASE</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.springframework.data</groupId>
+	            <artifactId>spring-data-releasetrain</artifactId>
+	            <version>Hopper-SR4</version>
 	            <type>pom</type>
 	            <scope>import</scope>
 	        </dependency>
@@ -40,6 +46,8 @@
 	  		<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -66,10 +74,45 @@
     		<artifactId>spring-boot-starter-freemarker</artifactId>  
 		</dependency>
 		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+        </dependency>
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
+		
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>springloaded</artifactId>
 		</dependency>
-		
+		<dependency>
+        	<groupId>org.springframework.session</groupId>
+        	<artifactId>spring-session</artifactId>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-ldap</artifactId>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.springframework.webflow</groupId>
+        	<artifactId>spring-webflow</artifactId>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.springframework.mobile</groupId>
+        	<artifactId>spring-mobile-device</artifactId>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.springframework.amqp</groupId>
+        	<artifactId>spring-rabbit</artifactId>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.springframework.hateoas</groupId>
+        	<artifactId>spring-hateoas</artifactId>
+    	</dependency>
+    	
+    
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
