--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
+spring.redis.host=localhost
+spring.redis.password=secret
+spring.redis.port=6379
