--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 spring.redis.host=localhost
-spring.redis.password=secret
+spring.redis.password=
 spring.redis.port=6379
