--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -1,19 +1,52 @@
+# Endpoints
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=true
+endpoints.shutdown.path=/shutdown
+
+
+# Management
 security.user.name=admin
 security.user.password=admin888
 management.security.role=SUPERUSER
-endpoints.shutdown.path=/shutdown
 management.port=8081
 management.address=127.0.0.1
 
 
+# Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
+# Redis
 spring.redis.host=localhost
 spring.redis.password=
 spring.redis.port=6379
+
+
+# FREEMARKER (FreeMarkerAutoConfiguration)  
+spring.freemarker.allow-request-override=false
+spring.freemarker.allow-session-override=false
+spring.freemarker.cache=true
+spring.freemarker.charset.Charset=utf-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html;charset=utf-8
+spring.freemarker.enabled=true
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.expose-spring-macro-helpers=true
+spring.freemarker.prefer-file-system-access=true
+spring.freemarker.suffix=.html
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.settings.template_update_delay=0
+spring.freemarker.settings.default_encoding=utf-8
+spring.freemarker.settings.classic_compatible=true
+spring.freemarker.order=1
+
+
+
+
+
+
+
