--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -53,14 +53,13 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
       		<groupId>org.springframework.boot</groupId>
       		<artifactId>spring-boot-starter-web</artifactId>
     	</dependency>
+    	<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		</dependency>
 		<dependency>
 		  	<groupId>org.springframework.boot</groupId>
 		  	<artifactId>spring-boot-starter-actuator</artifactId>
@@ -124,6 +123,10 @@
 			<version>0.2.10</version>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 		</dependency>
@@ -160,7 +163,11 @@
 		    <version>5.19.0.2</version>  
 		</dependency> 
 		<!-- 工作流 end -->
-
+		<dependency>
+	    	<groupId>org.apache.maven.plugins</groupId>
+	    	<artifactId>maven-surefire-plugin</artifactId>
+	    	<version>2.18.1</version>
+		</dependency>
 		
   </dependencies>
   
@@ -170,7 +177,11 @@
 		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
-			<configuration><executable>true</executable></configuration>
+			<configuration>
+				<executable>true</executable>
+				<mainClass>z.server.AppStart</mainClass>
+             	<layout>ZIP</layout>
+			</configuration>
 		</plugin>
 	</plugins>
   </build>
