--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -30,6 +30,13 @@
 	            <scope>import</scope>
 	        </dependency>
 	        <dependency>
+	            <groupId>org.springframework</groupId>
+	            <artifactId>spring-framework-bom</artifactId>
+	            <version>4.3.3.RELEASE</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>
+	        <dependency>
 	            <groupId>org.springframework.data</groupId>
 	            <artifactId>spring-data-releasetrain</artifactId>
 	            <version>Hopper-SR4</version>
@@ -46,11 +53,18 @@
 	  		<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
       		<groupId>org.springframework.boot</groupId>
@@ -64,10 +78,12 @@
 		  	<groupId>org.springframework.boot</groupId>
 		  	<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!--  
 		<dependency>
 		  	<groupId>org.springframework.boot</groupId>
 		  	<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		-->
 		<dependency>  
     		<groupId>org.springframework.boot</groupId>  
     		<artifactId>spring-boot-starter-freemarker</artifactId>  
@@ -82,6 +98,14 @@
 		</dependency>
 		
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>springloaded</artifactId>
