--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -5,11 +5,11 @@ endpoints.shutdown.path=/shutdown
 
 
 # Management
-security.user.name=admin
-security.user.password=admin888
-management.security.role=SUPERUSER
-management.port=8081
-management.address=127.0.0.1
+#security.user.name=admin
+#security.user.password=admin888
+#management.security.role=SUPERUSER
+#management.port=8081
+#management.address=127.0.0.1
 
 
 # Datasource
@@ -20,9 +20,18 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 # Redis
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.password=
 spring.redis.port=6379
+redis.timeout=100000
+redis.maxIdle=300
+redis.maxTotal=600
+redis.timeBetweenEvictionRunsMillis=30000  
+redis.minEvictableIdleTimeMillis=30000 
+redis.testOnBorrow=true
+redis.encode=utf-8
+redis.expire=604800000
+redis.unlock=false
 
 
 # FREEMARKER (FreeMarkerAutoConfiguration)  
