--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -11,6 +11,10 @@ endpoints.shutdown.path=/shutdown
 #management.port=8081
 #management.address=127.0.0.1
 
+#view Configuration:  
+#spring.view.prefix=/WEB-INF/views/  
+#Server Configuration:  
+#server.port=8080  
 
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true
@@ -18,27 +22,25 @@ spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#JPA Configuration:  
+spring.jpa.show-sql=true  
+#spring.jpa.generate-ddl=true  
+spring.jpa.hibernate.ddl-auto=update  
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect  
+#spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy  
+#spring.jpa.database=org.hibernate.dialect.MySQL5InnoDBDialect  
+
 
 # Redis
 spring.redis.host=127.0.0.1
 spring.redis.password=
 spring.redis.port=6379
-redis.timeout=100000
-redis.maxIdle=300
-redis.maxTotal=600
-redis.timeBetweenEvictionRunsMillis=30000  
-redis.minEvictableIdleTimeMillis=30000 
-redis.testOnBorrow=true
-redis.encode=utf-8
-redis.expire=604800000
-redis.unlock=false
 
 
 # FREEMARKER (FreeMarkerAutoConfiguration)  
 spring.freemarker.allow-request-override=false
 spring.freemarker.allow-session-override=false
 spring.freemarker.cache=true
-spring.freemarker.charset.Charset=utf-8
 spring.freemarker.check-template-location=true
 spring.freemarker.content-type=text/html;charset=utf-8
 spring.freemarker.enabled=true
@@ -51,7 +53,6 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
-spring.freemarker.order=1
 
 
 
