--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -17,27 +17,13 @@ endpoints.shutdown.path=/shutdown
 #server.port=8080  
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true
+spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-#JPA Configuration:  
-spring.jpa.show-sql=true  
-#spring.jpa.generate-ddl=true  
-spring.jpa.hibernate.ddl-auto=update  
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect  
-#spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy  
-#spring.jpa.database=org.hibernate.dialect.MySQL5InnoDBDialect  
 
-
-# Redis
-spring.redis.host=127.0.0.1
-spring.redis.password=
-spring.redis.port=6379
-
-
-# FREEMARKER (FreeMarkerAutoConfiguration)  
+# FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.allow-request-override=false
 spring.freemarker.allow-session-override=false
 spring.freemarker.cache=true
@@ -53,6 +39,14 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
+
+
+
+# Redis
+spring.redis.host=127.0.0.1
+spring.redis.password=
+spring.redis.port=6379
+
 
 
 
