--- a/test_springload_bad_beans/pom.xml
+++ b/test_springload_bad_beans/pom.xml
@@ -77,6 +77,13 @@
 		</dependency>
 		<!-- Compiler End -->
 
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.19.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -89,6 +96,14 @@
 					<executable>true</executable>
 					<mainClass>z.server.AppStart</mainClass>
 					<layout>ZIP</layout>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
