--- a/test_springload_bad_beans/pom.xml
+++ b/test_springload_bad_beans/pom.xml
@@ -60,6 +60,10 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<type>jar</type>
@@ -68,20 +72,10 @@
 
 		<!-- Compiler -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>springloaded</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<!-- Compiler End -->
-
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.19.1</version>
-		</dependency>
 
 
 	</dependencies>
@@ -94,7 +88,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<executable>true</executable>
-					<mainClass>z.server.AppStart</mainClass>
+					<mainClass>cn.ptp.AppStart</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
 			</plugin>
@@ -102,9 +96,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
+				<configuration><skipTests>true</skipTests></configuration>
 			</plugin>
 		</plugins>
 	</build>
