--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cn.ptp</groupId>
-	<artifactId>test_springload_bad_beans</artifactId>
+	<artifactId>Test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>test_springload_bad_beans</name>
+	<name>Test</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -81,7 +81,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>test_springload_bad_beans</finalName>
+		<finalName>Test</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
