--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
+
+server.port=8080
