--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#Server
+server.port=8080
+
+
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
@@ -22,4 +26,7 @@ spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
 
-server.port=8080
+
+#Hibernate, #off,error,debug,trace,fatal,info
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
