--- a/SpringData/src/main/resources/application.properties
+++ b/SpringData/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
