--- a/MyBatis/pom.xml
+++ b/MyBatis/pom.xml
@@ -57,6 +57,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 		<dependency>
