--- a/MyBatis/src/main/resources/application.properties
+++ b/MyBatis/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+#Server
+server.port=8080
+
+
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/myssh?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -21,3 +25,9 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
+
+
+#Hibernate, #off,error,debug,trace,fatal,info
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
