--- a/MyBatis/pom.xml
+++ b/MyBatis/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+		</dependency>
 
 		<!-- Compiler -->
 		<dependency>
@@ -113,18 +117,15 @@
 
 	<repositories>
 		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/libs-milestone</url>
-			<snapshots><enabled>false</enabled></snapshots>
+			<id>spring-milestone</id>
+			<url>https://repo.spring.io/libs-release</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
-			<id>spring-milestones</id>
-			<url>https://repo.spring.io/libs-milestone</url>
+			<id>spring-milestone</id>
+			<url>https://repo.spring.io/libs-release</url>
 		</pluginRepository>
 	</pluginRepositories>
-
 
 </project>
