--- a/MyBatis/src/main/resources/application.properties
+++ b/MyBatis/src/main/resources/application.properties
@@ -31,3 +31,7 @@ spring.freemarker.settings.classic_compatible=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
+
+mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
+mybatis.type-aliases-package=cn.ptp.entity
+
