--- a/init/src/main/resources/application.properties
+++ b/init/src/main/resources/application.properties
@@ -21,13 +21,7 @@ spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=true
 spring.freemarker.prefer-file-system-access=true
 spring.freemarker.suffix=.html
-spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.template-loader-path=/WEB-INF/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
-
-
-#Hibernate, #off,error,debug,trace,fatal,info
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
-
