--- a/MyBatis/src/main/resources/application.properties
+++ b/MyBatis/src/main/resources/application.properties
@@ -32,9 +32,10 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.sample.mybatis.mapper=TRACE
 
+
+# Mybatis
 logging.level.cn.ptp.mapper=debug
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 mybatis.type-aliases-package=cn.ptp.entity
-
-
+mybatis.config-location=classpath:mybatis.xml
 
