--- a/MyBatis/src/main/resources/application.properties
+++ b/MyBatis/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+# Druid
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.allow-request-override=false
@@ -37,5 +40,4 @@ logging.level.sample.mybatis.mapper=TRACE
 logging.level.cn.ptp.mapper=debug
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 mybatis.type-aliases-package=cn.ptp.entity
-mybatis.config-location=classpath:mybatis.xml
 
