--- a/init/pom.xml
+++ b/init/pom.xml
@@ -95,6 +95,13 @@
 					<mainClass>cn.ptp.AppStart</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>springloaded</artifactId>
+						<version>1.2.5.RELEASE</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
