--- a/SpringData/src/main/resources/application.properties
+++ b/SpringData/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.username=root
 spring.datasource.password=admin888
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+# Druid
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.allow-request-override=false
@@ -28,6 +31,7 @@ spring.freemarker.settings.classic_compatible=true
 
 
 #Hibernate, #off,error,debug,trace,fatal,info
+logging.level.root=info
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
-
+logging.level.org.springframework.web=info
