--- a/SpringData/pom.xml
+++ b/SpringData/pom.xml
@@ -58,6 +58,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.mobile</groupId>
+			<artifactId>spring-mobile-device</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
