--- a/SpringData/src/main/resources/application.properties
+++ b/SpringData/src/main/resources/application.properties
@@ -35,3 +35,10 @@ logging.level.root=info
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.org.springframework.web=info
+
+
+############################################################################
+host.url=http://www.ison.xin
+asset.public=http://static.ison.xin/public
+asset.private=http://static.ison.xin/app1
+
