--- a/SpringData/src/main/resources/application.properties
+++ b/SpringData/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.freemarker.template-loader-path=/WEB-INF/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
+spring.freemarker.settings.number_format=0.##
 
 
 #Hibernate, #off,error,debug,trace,fatal,info
