--- a/Base/src/main/resources/application.properties
+++ b/Base/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=utf-8
 spring.freemarker.settings.classic_compatible=true
+spring.freemarker.settings.number_format=0.##
 
 
 
